# mbed-edge-examples

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.pt-example  Dockerfile.simple-pt-example  Doxyfile.in  Jenkinsfile  Makefile  README.md  doxygen_frontpage.md  git_details.cmake  pt-crypto-api-example.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: make.yml  misspell.yml  prod-edge-core-config.json
blept-example/: CMakeLists.txt  README.md  blept_example.docopt  blept_example_clip.h  compat.h  devices.c  devices.h  gen_docopt.sh  main.c  pt_ble.c  pt_ble.h  pt_ble_supported_translations.c  pt_ble_supported_translations.h  pt_ble_translations.c  pt_ble_translations.h  pt_edge.c  pt_edge.h
byte-order/: CMakeLists.txt  byte_order.c
c-api-stress-tester/: CMakeLists.txt  README.md  gen_docopt.sh  stress_tester.c  stress_tester.docopt  stress_tester_clip.h
c-api-stress-tester/stress-tester/: stress_tester.h
cmake/: examples_configure.cmake  examples_include_directories.cmake
cmake/toolchains/: mcc-linux-x86.cmake  wise-3610-sdk.cmake
config/: .gitignore
device-interface/: CMakeLists.txt  thermal_zone.c
examples-common/: CMakeLists.txt  byte_order.c  client_config.c  ipso_objects.c  thermal_zone.c
examples-common-2/: CMakeLists.txt  client_config.c  ipso_objects.c
examples-common/examples-common/: client_config.h  ipso_objects.h
include/byte-order/: byte_order.h
include/examples-common/: ipso_objects.h
include/examples-common-2/: client_config.h  ipso_objects.h
k8s-at-the-edge-example/: DEV.md  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  test-api.sh
k8s-at-the-edge-example/dummy-device-app/: Cargo.toml  LOGGING.md
k8s-at-the-edge-example/dummy-device-app/.cargo/: config.toml
k8s-at-the-edge-example/k8s/: README.md  render.sh
k8s-at-the-edge-example/k8s/rendered/0195936439b66240d0040fa600000000/: dummy-device-app-pod.yaml  nginx-pod.yaml  postgres-pod.yaml  postgres-pv-pvc.yaml  web-portal-pod.yaml
k8s-at-the-edge-example/k8s/rendered/0197b36304082e89295467ae00000000/: dummy-device-app-pod.yaml  nginx-configmap.yaml  nginx-pod.yaml  postgres-pod.yaml  postgres-pv-pvc.yaml  web-portal-pod.yaml
k8s-at-the-edge-example/k8s/rendered/01986c6d1bb04e66114a542b00200000/: dummy-device-app-pod.yaml  nginx-pod.yaml  postgres-configmap.yaml  postgres-pod.yaml  postgres-pv-pvc.yaml  web-portal-pod.yaml
k8s-at-the-edge-example/k8s/rendered/01987b4c1f1d4e66114a542b00200000/: dummy-device-app-pod.yaml  nginx-configmap.yaml  nginx-pod.yaml  postgres-configmap.yaml  postgres-pod.yaml  postgres-pv-pvc.yaml  postgres-pv.yaml  web-portal-pod.yaml
k8s-at-the-edge-example/k8s/rendered/0198832759f82e89295467ae00000000/: dummy-device-app-pod.yaml  nginx-configmap.yaml  nginx-pod.yaml  postgres-configmap.yaml  postgres-pod.yaml  postgres-pv-pvc.yaml  postgres-pv.yaml  web-portal-pod.yaml
k8s-at-the-edge-example/k8s/rendered/019883932f152e89295467ae00000000/: dummy-device-app-pod.yaml  nginx-configmap.yaml  nginx-pod.yaml  postgres-configmap.yaml  postgres-pod.yaml  postgres-pv-pvc.yaml  postgres-pv.yaml  web-portal-pod.yaml
k8s-at-the-edge-example/k8s/templates/: dummy-device-app-pod.yaml  nginx-configmap.yaml  nginx-pod.yaml  postgres-configmap.yaml  postgres-pod.yaml  postgres-pv-pvc.yaml  postgres-pv.yaml  web-portal-pod.yml
k8s-at-the-edge-example/web-portal/: Dockerfile  nginx.conf  package-lock.json  package.json
k8s-at-the-edge-example/web-portal/public/: index.html
k8s-at-the-edge-example/web-portal/src/: index.css
kaas-example/: README.md  deploy.sh  docker-compose.yml
kaas-example/dummy-device-app/: .env  Cargo.toml  Dockerfile
kaas-example/dummy-device-app/migrations/: 20240101000000_create_devices_table.sql
kaas-example/dummy-device-app/src/: main.rs
kaas-example/k8s/: README.md  render.sh
kaas-example/k8s/rendered/019915fa2ded2e89295467ae00000000/: dummy-device-app-pod.yaml  nginx-configmap.yaml  nginx-pod.yaml  postgres-configmap.yaml  postgres-pod.yaml  postgres-pv-pvc.yaml  postgres-pv.yaml  web-portal-pod.yaml
kaas-example/k8s/templates/: dummy-device-app-pod.yaml  edge-pv-storage-class.yml  postgres-pod.yaml  postgres-pv-pvc.yaml  web-portal-pod.yml
kaas-example/scripts/: setup-local.sh
kaas-example/web-portal/: 5L8r5EXAiIpfXvngPZneRX  package-lock.json  package.json
kaas-example/web-portal/src/: App.js
lib/: CMakeLists.txt
mqttpt-example/: CMakeLists.txt  README.md  gen_docopt.sh  mqttpt_example.c  mqttpt_example.docopt  mqttpt_example_clip.h
mqttpt-example/mqttgw_sim/: README.md  mqtt_ep.sh  mqtt_gw.sh  mqtt_gw_certificates_renew.sh  mqtt_gw_crypto_api.sh
pt-example/: CMakeLists.txt  README.md  client_example.c  client_example.docopt  client_example_clip.h  gen_docopt.sh
pt-example/pt-example/: client_example.h
simple-js-examples/: README.md  package.json  simple-fota-example.js  simple-grm-example.js  simple-mgmt-example.js  simple-pt-example.js
